hphp/hack/test/typecheck/inout/bad_inout_use_lvalue6.php.exp
File "bad_inout_use_lvalue6.php", line 15, characters 11-13:
You cannot use this syntax with `inout`. (Parsing[1002])
File "bad_inout_use_lvalue6.php", line 16, characters 11-13:
You cannot use this syntax with `inout`. (Parsing[1002])
